--- a/sources/Device53/Device53.uvprojx
+++ b/sources/Device53/Device53.uvprojx
@@ -4691,6 +4691,36 @@
               <FilePath>.\src\Hardware\ADC.h</FilePath>
             </File>
             <File>
+              <FileName>Controls.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\libs\common\S8-53\Hardware\Controls.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>Controls.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\libs\common\S8-53\Hardware\Controls.h</FilePath>
+            </File>
+            <File>
+              <FileName>CPU.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Hardware\CPU.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>CPU.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\src\Hardware\CPU.h</FilePath>
+            </File>
+            <File>
+              <FileName>CPU_It.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Hardware\CPU_It.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>CPU_Rtc.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\src\Hardware\CPU_Rtc.cpp</FilePath>
+            </File>
+            <File>
               <FileName>FLASH.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\Hardware\FLASH.h</FilePath>
@@ -4744,46 +4774,6 @@
               <FileName>Sound.h</FileName>
               <FileType>5</FileType>
               <FilePath>..\libs\common\Hardware\Sound.h</FilePath>
-            </File>
-            <File>
-              <FileName>it.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Hardware\it.h</FilePath>
-            </File>
-            <File>
-              <FileName>stm32f2xx_it.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Hardware\stm32f2xx_it.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>stm32f2xx_it.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Hardware\stm32f2xx_it.h</FilePath>
-            </File>
-            <File>
-              <FileName>Controls.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\libs\common\S8-53\Hardware\Controls.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>Controls.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\libs\common\S8-53\Hardware\Controls.h</FilePath>
-            </File>
-            <File>
-              <FileName>CPU.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Hardware\CPU.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>CPU.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\src\Hardware\CPU.h</FilePath>
-            </File>
-            <File>
-              <FileName>CPU_Rtc.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\src\Hardware\CPU_Rtc.cpp</FilePath>
             </File>
           </Files>
         </Group>
