--- a/sources/Loader53/Loader53.uvprojx
+++ b/sources/Loader53/Loader53.uvprojx
@@ -1816,6 +1816,16 @@
               <FileType>5</FileType>
               <FilePath>.\src\Hardware\CPU.h</FilePath>
             </File>
+            <File>
+              <FileName>VCP.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>..\libs\common\Hardware\VCP.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>VCP.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\libs\common\Hardware\VCP.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -2480,21 +2490,6 @@
               <FileName>FPGATypes.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\src\FPGA\FPGATypes.h</FilePath>
-            </File>
-          </Files>
-        </Group>
-        <Group>
-          <GroupName>VCP</GroupName>
-          <Files>
-            <File>
-              <FileName>VCP.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\libs\common\VCP\VCP.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>VCP.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>..\libs\common\VCP\VCP.h</FilePath>
             </File>
           </Files>
         </Group>
